--- a/package.json
+++ b/package.json
@@ -8,15 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "@vue/cli-plugin-typescript": "^4.5.13",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
+    "postcss-sass": "^0.5.0",
+    "postcss-scss": "^4.0.0",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.5.1",
+    "roboto-fontface": "*",
+    "sockjs-client": "^1.5.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuetify": "^3.0.0-alpha.0",
+    "vuex": "^4.0.0-0",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
+    "@types/sockjs-client": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -29,7 +40,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "typescript": "^4.3.2"
+    "node-sass": "^6.0.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^10.2.0",
+    "typescript": "^4.3.2",
+    "vue-cli-plugin-vuetify": "^2.4.1"
   },
   "eslintConfig": {
     "root": true,
