--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
+    "mosha-vue-toastify": "^1.0.13",
     "postcss-sass": "^0.5.0",
     "postcss-scss": "^4.0.0",
     "primeicons": "^4.1.0",
